<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <EditText
        android:id="@+id/edname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/edid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edname"
        android:inputType="numberDecimal"
        android:hint="@string/id"/>

    <EditText
        android:id="@+id/edlevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edid"
        android:inputType="numberDecimal"
        android:hint="@string/Level"/>

    <EditText
        android:id="@+id/edcredit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edlevel"
        android:inputType="numberDecimal"
        android:hint="@string/credit"/>

    <EditText
        android:id="@+id/edusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edcredit"
        android:inputType="numberDecimal"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edusername"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/btnsave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveinfo"
        android:layout_below="@+id/edpassword"
        />

    <Button
        android:id="@+id/btnviewall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/viewall"
        android:layout_below="@+id/btnsave"
        />

</RelativeLayout>